--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>test</title>
   </head>
-  <body>
+  <body style="display: block; width: 100%; height: 100%; background-image: url('/static/background.svg'); background-size: cover; background-repeat: no-repeat">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
